# talk-to-my-books

./: .gitignore  Procfile  README.md  Sage.py  main.py  pyproject.toml  tests.py  util.py
data/epubs/Inadequate Equillibria/: Inadequate Equillibria.epub
data/epubs/Infinite Jest/: Infinite Jest.epub
data/epubs/SeeingLikeAState/: Seeing Like A State.epub
data/epubs/The Gift of the Gab/: The Gift of the Gab.epub  The Gift of the Gab.json
notebooks/: Experiment-1.ipynb  Gradio-Experiment.ipynb  Seeing-Like-A-State.ipynb  TalktoMyBooks2.ipynb
